@@ -24,6 +24,8 @@
 	- [kevin] $2163: clear command line in execute_command
 	- [kevin] $2164: changed DCOP/OLE ready_for_transfers to really check if the emulated calculator is ready
 	- [kevin] $2166: fixed FlashROM identifiers so the HW4 8 MB FlashROM gets detected properly by AMS 3.10
+	- [kevin] $2168: fixed recfile crash when receiving something which is not a valid variable
+	- [kevin] $2168: fixed ti68k_linkport_ready to reset the link so TiEmu doesn't try to receive a "file" sometimes
 * libticonv changes (roms):
 	- renamed stdints.h into stdints4.h
 	- added 0x5d0x40 => IDList detokenization (TI84+)
